# RuralTail-MLR

./: .gitignore  CHECKPOINT_EVALUATION.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  environment.yml  pyproject.toml  requirements-mamba.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  reproduction_question.yml
.github/workflows/: ci.yml
configs/: default.yaml
configs/data/: agriculture_vision_2021.yaml  china_mas_50k.yaml
configs/experiment/: main_efficientnetv2_s.yaml  main_mambaout_s.yaml  main_mlmamba_resnet18.yaml  main_pvtv2_b2.yaml  main_resnet50.yaml  main_sfin_resnet18.yaml
scripts/: evaluate_paper_protocol.sh  prepare_agriculture_vision_2021_labeled.sh  prepare_china_mas_50k.sh  reproduce_paper_tables.sh  run_supplement_group_eval.sh  train_score_sources_agv.sh  train_score_sources_china.sh
supplement/: seed2026_group_eval_manifest.example.json
tests/: test_audit.py  test_checkpoint.py  test_collect_results.py  test_dataset.py  test_distributed.py  test_label_schema.py  test_losses.py  test_metrics.py  test_model_configs.py  test_model_forward.py  test_paper_tools.py  test_split.py  test_threshold.py  test_train_smoke.py
tools/: _bootstrap.py  build_eval_manifest.py  check_environment.py  collect_results.py  compute_frequency.py  data_audit.py  evaluate.py  make_paper_tables.py  make_split.py  plot_failures.py  plot_hmt.py  plot_per_class_ap.py  prepare_agriculture_vision.py  prepare_china_mas_50k.py  profile_model.py  run_supplement_group_eval.py  train.py
(+49 files in other folders)
