[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruraltail-mlr"
version = "0.1.0"
description = "RuralTail-MLR for long-tailed multi-label rural and agricultural remote-sensing classification"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "RuralTail-MLR Authors"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402"]
